--- a/src/styles.css
+++ b/src/styles.css
@@ -70,14 +70,14 @@ div {
 }
 
 .content-box {
-  background-color: rgb(199, 225, 248);
+  background-color: rgb(216 237 255);
   padding: 20px;
   border-radius: 10px;
   margin-bottom: 20px;
 }
 
 .buttons-container {
-  position: absolute;
+  position: relative;
   right: 0px;
   bottom: 0px;
   padding: 16px;
